# llvm-dataflow-analysis

./: CMakeLists.txt  LICENSE  README.md
include/: DataflowAnalysis.h
test/constant-propagation/: Makefile
test/constant-propagation/c/: 01-callahan-86.c
test/filepolicy/: 01straightCorrect.c  02straightBuggy.c  03mergeCorrect.c  04mergeBuggy.c  05mergePhisCorrect.c  06loopCorrect.c  07loopBuggy.c  Makefile
test/filepolicy/c/: 05mergePhisCorrect.c
test/futurefunctions/: Makefile
test/futurefunctions/c/: 01straightCorrect.c  02straightBuggy.c  03mergeCorrect.c  04mergeBuggy.c  06loopCorrect.c  07loopBuggy.c
tools/: CMakeLists.txt
tools/constant-propagation/: CMakeLists.txt  main.cpp
tools/filepolicy/: CMakeLists.txt  main.cpp
tools/futurefunctions/: CMakeLists.txt  main.cpp
